--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 		<h1>Ressources pédagogiques</h1>
 		<a href='https://www.imabi.net/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">imabi</a>
 		<a href='https://jlptsensei.com/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">jlptsensei</a>
+		<a href='https://www.ici-japon.com/apprendre-le-japonais/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">ici-japon</a>
 		<a href='https://www.erin.jpf.go.jp/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">erin's challenge</a>
 		<a href='https://tsunagarujp.bunka.go.jp/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">tsunagarujp</a>
 		<a href='https://www.nhk.or.jp/lesson/english/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">nhk easy japanese</a>
@@ -116,6 +117,10 @@
 
 			case 'kanji trainer':
 			infcont = '• jeu pour se préparer au 漢字能力検定 (kanji nouryoku kentei) 2006)';
+			break
+
+			case 'ici-japon':
+			infcont = "• 28 cours d'introduction au japonais entièrement en français";
 			break
 
 			case 'reibun':
