--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<p id='c-info'>survolez in site web avec votre souris pour afficher des informations le concernant</p>
 	</div>
 
-	<div class='tt' id='el4'>
+	<div class='tt' id='el3'>
 		<h1>Ressources pédagogiques</h1>
 		<a href='https://www.imabi.net/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">imabi</a>
 		<a href='https://jlptsensei.com/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">jlptsensei</a>
@@ -41,7 +41,7 @@
 		<a href='https://archive.org/details/Genki/Genki%20-%20Elementary%20Japanese%20I/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">genki elementary</a>
 	</div>
 
-	<div class='tt' id='el5'>
+	<div class='tt' id='el4'>
 		<h1>Mangas Raw</h1>
 		<a href='https://welovemanga.one/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">welovemanga</a>
 		<a href='https://beta.lovehug.net/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">lovehug</a>
@@ -57,7 +57,7 @@
 		<a href='https://comic.pixiv.net/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">pixiv comic</a>
 	</div>
 
-	<div class='tt' id='el6'>
+	<div class='tt' id='el5'>
 		<h1>Subs Japonaises</h1>
 		<a href='https://itazuraneko.neocities.org/library/sub.html' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">itazuraneko</a>
 		<a href='https://kitsunekko.net/dirlist.php?dir=subtitles%2Fjapanese%2F' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">kitsunekko</a>
@@ -65,33 +65,33 @@
 	</div>
 
 
-	<div class='tt' id='el7'>
+	<div class='tt' id='el6'>
 		<h1>Phrases Exemples</h1>
 		<a href='http://yourei.jp/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">yourei</a>
 		<a href='https://kyuhubb.github.io/reibun' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">reibun</a>
 	</div>
 
-	<div class='tt' id='el8'>
+	<div class='tt' id='el7'>
 		<h1>Prononciation</h1>
 		<a href='https://forvo.com/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">forvo</a>
 		<a href='https://youglish.com/japanese' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">youglish</a>
 	</div>
 
 
-	<div class='tt' id='el9'>
+	<div class='tt' id='el8'>
 		<h1>Divers</h1>
 		<a href='https://nyaa.si/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">nyaa</a>
 		<a href='https://www.ggbases.com/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">ggbases(18+)</a>
 		<a href='https://www.tokyotosho.info/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">tokyotosho(18+)</a>
 	</div>
 
-	<div class='tt' id='el10'>
+	<div class='tt' id='el9'>
 		<h1>Quiz</h1>
 		<a href='http://nandoku.php.xdomain.jp/ja/exam.php?class=6' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">nandoku</a>
 		<a href='http://nandoku.php.xdomain.jp/ja/play-class.php?class=6' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">nandoku - kanken</a>
 	</div>
 
-	<div class='tt' id='el11'>
+	<div class='tt' id='el10'>
 		<h1>Créations originales</h1>
 		<a href='https://kyuhubb.github.io/cardogus' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">cardogus</a>
 		<a href='https://www.mediafire.com/file/x8yza7jegwnc28w/Jitogus.rar/file' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">jitogus</a>
@@ -99,8 +99,16 @@
 	</div>
 
 	<div class='tt' id='el11'>
-		<h1>Iso Psp</h1>
-			<a href='https://www.mediafire.com/file/bfukw4w9ckxnvti/Kyoto_Daigaku_Atsuji_Tetsuji_Kyouju_Kanshuu_-_Zaidan_Houjin_Nihon_Kanji_Nouryoku_Kentei_Kyoukai_Kyouryoku_-_Kanji_Trainer_Portable_%2528Japan%2529_%2528v1.01%2529.zip/file' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">kanji trainer</a>
+		<h1>PSP</h1>
+			<a href='https://www.ppsspp.org/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">PPSSPP</a>
+			<a href='https://www.mediafire.com/file/bfukw4w9ckxnvti/Kyoto_Daigaku_Atsuji_Tetsuji_Kyouju_Kanshuu_-_Zaidan_Houjin_Nihon_Kanji_Nouryoku_Kentei_Kyoukai_Kyouryoku_-_Kanji_Trainer_Portable_%2528Japan%2529_%2528v1.01%2529.zip/file' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">Kanji Trainer</a>
+			<a href='https://www.mediafire.com/file/c30wsb3g90u77nh/Tales_of_Eternia_%2528Japan%2529.rar/file' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">Tales of Eternia</a>
+			<a href='https://www.mediafire.com/file/ug0xthxeeftus2v/Nendoroid_Generation_JPN_PSP.rar/file' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">Nendoroid Generation</a>
+		</div>
+
+	<div class='tt' id='el12'>
+		<h1>Visual Novel</h1>
+			<a href='https://www.freem.ne.jp/win/game/1438' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">Houchou-san no Uwasa</a>
 		</div>
 
 </body>
@@ -115,8 +123,24 @@
 		infweb = webinf;
 		switch(infweb){
 
-			case 'kanji trainer':
-			infcont = '• jeu pour se préparer au 漢字能力検定 (kanji nouryoku kentei) 2006)';
+			case 'Nendoroid Generation':
+			infcont = "• combat tour par tour<br><br>• large crossover<br><br>• les Nendoroid sont trop cutes<br><br>• japonais abordable<br>• les aubergines sont des fruits";
+			break
+
+			case 'PPSSPP':
+			infcont = "• émulateur PSP<br><br>• supporte : windows, macOS, linux, android, iOS, Switch, Blackberry, autres..."
+			break
+
+			case 'Tales of Eternia':
+			infcont = "• JRPG<br><br>• coup de coeur<br><br>• partiellement Dubbé en japonais<br><br>• combats en temps réel (pas tour par tour)"
+			break
+
+			case 'Houchou-san no Uwasa':
+			infcont = "• horreur/légende urbaine<br><br>• gameplay permet de se déplacer librement dans le batîment<br><br>• japonais facile<br>• SFW"
+			break
+
+			case 'Kanji Trainer':
+			infcont = '• jeu pour se préparer au 漢字能力検定 (kanji nouryoku kentei) 2006<br><br>• contient également divers mini-jeux liés au kanji';
 			break
 
 			case 'ici-japon':
@@ -128,7 +152,7 @@
 			break
 
 			case 'jitogus':
-			infcont = '• compilation de dictionnaires à télécharger pour utilisation offline<br><br>• recherche par moteur de recherche<br><br>• en bêta, ne touchez à rien lors des chargements'
+			infcont = '• compilation de dictionnaires à télécharger pour utilisation offline<br><br>• recherche via moteur de recherche<br><br>• en bêta, ne touchez à rien lors des chargements'
 			break
 
 			case 'cardogus':
