--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 		switch(infweb){
 
 			case 'Nendoroid Generation':
-			infcont = "• combat tour par tour<br><br>• large crossover<br><br>• les Nendoroid sont trop cutes<br><br>• japonais abordable<br>• les aubergines sont des fruits";
+			infcont = "• combat tour par tour<br><br>• large crossover<br><br>• les Nendoroid sont trop cutes<br><br>• japonais abordable<br><br>• les aubergines sont des fruits";
 			break
 
 			case 'PPSSPP':
