--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
 		<a href='https://welovemanga.one/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">welovemanga</a>
 		<a href='https://beta.lovehug.net/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">lovehug</a>
 		<a href='https://rawkuma.com/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">rawkuma</a>
-		<a href='https://hachimanga.com/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">hachimanga</a>
+		<a href='http://www.zip-rar.com/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">zip-rar</a>
 		<a href='https://dlraw.net/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">dlraw</a>
 		<a href='http://dl-zip.com/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">dl-zip</a>
 		<a href='http://jraws.net/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">jraws</a>
 		<a href='https://manga-zip.info/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">manga-zip.info</a>
 		<a href='http://13dl.net/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">13dl.net</a>
 		<a href='https://comic.pixiv.net/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">pixiv comic</a>
-		<a href='https://www.sukima.me/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">sukima</a>
+		<a href='https://www.sukima.me/book/free/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">sukima</a>
 		<a href='https://shonenjumpplus.com/series/oneshot' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">shōnen jump +</a>
 	</div>
 
@@ -128,11 +128,11 @@
 			break
 
 			case 'shōnen jump +':
-			infcont = "• téléchargment possible pour via l'analyseur réseau<br><br>• reconstruction des pages nécessaire après téléchargement<br><br>• mélange des pièces du puzzle identique sur chaque page";
+			infcont = "• téléchargment possible via l'analyseur réseau<br><br>• reconstruction des pages nécessaire après téléchargement<br><br>• mélange des pièces du puzzle identique sur chaque page";
 			break
 
 			case 'sukima':
-			infcont = "• téléchargment possible pour via l'analyseur réseau<br><br>• reconstruction des pages nécessaire après téléchargement<br><br>• mélange des pièces du puzzle variable";
+			infcont = "• téléchargment possible via l'analyseur réseau<br><br>• reconstruction des pages nécessaire après téléchargement<br><br>• mélange des pièces du puzzle variable";
 			break
 
 			case 'PPSSPP':
