--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 		<a href='https://rawkuma.com/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">rawkuma</a>
 		<a href='http://www.zip-rar.com/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">zip-rar</a>
 		<a href='https://dlraw.net/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">dlraw</a>
+		<a href='https://dl-raw.net/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">dl-raw</a>
 		<a href='http://dl-zip.com/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">dl-zip</a>
 		<a href='http://jraws.net/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">jraws</a>
 		<a href='https://manga-zip.info/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">manga-zip.info</a>
