--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		<a href='https://itazuraneko.neocities.org/library/shousetu.html' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">itazuraneko</a>
 		<a href='https://boroboro.neocities.org/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">boroboro</a>
 		<a href='https://kakuyomu.jp/publication/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">kakuyomi</a>
+		<a href='https://syosetu.com/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">syosetu</a>
 	</div>
 
 	<div id="info">
@@ -43,6 +44,13 @@
 
 	<div class='tt' id='el4'>
 		<h1>Mangas Raw</h1>
+		<a href='https://rawdevart.com/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">rawdevart</a>
+		<a href='https://klmanga.com/index' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">klmanga</a>
+		<a href='https://www.mangaz.com/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">mangaz</a>
+		<a href='https://tonarinoyj.jp/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">tonarinoyj</a>
+		<a href='https://news.kodansha.co.jp/comics' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">kodansha</a>
+		<a href='https://www.s-manga.net/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">s-manga</a>
+		<a href='http://www.a-zmanga.net/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">a-zmanga</a>
 		<a href='https://welovemanga.one/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">welovemanga</a>
 		<a href='https://rawkuma.com/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">rawkuma</a>
 		<a href='http://www.zip-rar.com/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">zip-rar</a>
@@ -69,6 +77,9 @@
 		<h1>Phrases Exemples</h1>
 		<a href='http://yourei.jp/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">yourei</a>
 		<a href='https://kyuhubb.github.io/reibun' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">reibun</a>
+		<a href='https://sentencesearch.neocities.org/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">sentencesearch</a>
+		<a href='https://nlb.ninjal.ac.jp/search/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">ninjal</a>
+		<a href='https://massif.la/ja' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">massif</a>
 	</div>
 
 	<div class='tt' id='el7'>
@@ -82,6 +93,8 @@
 		<h1>Divers</h1>
 		<a href='https://nyaa.si/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">nyaa</a>
 		<a href='https://www.ggbases.com/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">ggbases(18+)</a>
+		<a href='https://ryuubloggerv2.blogspot.com/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">ryuubloggerv2(+18)</a>
+		<a href='https://www.ryuugames.com/tag/japanese/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">ryuugames(+18)</a>
 		<a href='https://www.tokyotosho.info/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">tokyotosho(18+)</a>
 	</div>
 
@@ -101,6 +114,7 @@
 	<div class='tt' id='el11'>
 		<h1>PSP</h1>
 			<a href='https://www.ppsspp.org/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">PPSSPP</a>
+			<a href='https://cdromance.com/psp/?filter_language=japanese&filter_region=japan' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">cdromance</a>
 			<a href='https://www.mediafire.com/file/bfukw4w9ckxnvti/Kyoto_Daigaku_Atsuji_Tetsuji_Kyouju_Kanshuu_-_Zaidan_Houjin_Nihon_Kanji_Nouryoku_Kentei_Kyoukai_Kyouryoku_-_Kanji_Trainer_Portable_%2528Japan%2529_%2528v1.01%2529.zip/file' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">Kanji Trainer</a>
 			<a href='https://www.mediafire.com/file/c30wsb3g90u77nh/Tales_of_Eternia_%2528Japan%2529.rar/file' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">Tales of Eternia</a>
 			<a href='https://www.mediafire.com/file/ug0xthxeeftus2v/Nendoroid_Generation_JPN_PSP.rar/file' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">Nendoroid Generation</a>
@@ -123,6 +137,10 @@
 		infweb = webinf;
 		switch(infweb){
 
+			case 'cdromance':
+			infcont = "• jeux japonais pour émulateur psp";
+			break
+
 			case 'Nendoroid Generation':
 			infcont = "• combat tour par tour<br><br>• large crossover<br><br>• les Nendoroid sont trop cutes<br><br>• japonais abordable<br><br>• les aubergines sont des fruits";
 			break
@@ -144,7 +162,7 @@
 			break
 
 			case 'Houchou-san no Uwasa':
-			infcont = "• horreur/légende urbaine<br><br>• gameplay permet de se déplacer librement dans le batîment<br><br>• japonais facile<br>• SFW"
+			infcont = "• horreur/légende urbaine<br><br>• gameplay permet de se déplacer librement dans le batîment<br><br>• japonais facile<br><br>• SFW"
 			break
 
 			case 'Kanji Trainer':
@@ -171,6 +189,9 @@
 			infcont = '• section dédiée aux mangas partiellement ou totalement disponibles gratuitement';
 			break
 
+			case 'syosetu':
+			infcont = '• light novels amateurs';
+			break
 
 			case 'kakuyomi':
 			infcont = '• light novels amateurs<br><br>• les LN postés ayants pour origine Kakuyomi et adaptés en livre, anime, jeux-vidéo également disponible gratuitement';
@@ -181,7 +202,7 @@
 			break
 
 			case 'ggbases(18+)':
-			infcont = '• torrents douteux (VN 18+ ?)';
+			infcont = '• torrents douteux (VN 18+?)';
 			break
 
 			case 'tokyotosho(18+)':
