--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 		<a href='https://tsunagarujp.bunka.go.jp/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">tsunagarujp</a>
 		<a href='https://www.nhk.or.jp/lesson/english/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">nhk easy japanese</a>
 		<a href='https://archive.org/details/Genki/Genki%20-%20Elementary%20Japanese%20I/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">genki elementary</a>
+		<a href='https://yomuyomu.app/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">yomuyomu</a>
 	</div>
 
 	<div class='tt' id='el4'>
@@ -191,6 +192,10 @@
 
 			case 'syosetu':
 			infcont = '• light novels amateurs';
+			break
+
+			case 'yomuyomu':
+			infcont = '• une histoire en 12 chapitres spécifiquement conçue avec une difficulté JLPT N5<br><br>• adaptation d\'une nouvelle en 8 chapitres dans le but de correspondre à une difficulté N3<br><br>• lecture audio disponible';
 			break
 
 			case 'kakuyomi':
