--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<a href='https://www.weblio.jp/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">weblio</a>
 		<a href='http://honyakustar.com/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">honyakustar</a>
 		<a href='https://www.dictionnaire-japonais.com' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">dictionnaire-japonais</a>
+		<a href='https://jibiki.fr/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">jibiki</a>
 	</div>
 	<div class='tt' id='el2'>
 		<h1>Light Novels</h1>
@@ -299,6 +300,10 @@
 			break
 
 			case 'dictionnaire-japonais':
+			infcont = '• dictionnaire franco-japonais en ligne';
+			break
+
+			case 'jibiki':
 			infcont = '• dictionnaire franco-japonais en ligne';
 			break
 
