--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 	<div class='tt' id='el13'>
 		<h1>Hololive</h1>
 			<a href='https://store.steampowered.com/app/1178050/_/?l=japanese' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">狐の旅路 (kitsune no tabiji)</a>
-			<a href='' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">Hololive error</a>
+			<a href='https://www.youtube.com/playlist?list=PL1NeGg1woXqmjylfq2x5E8dA2TUvQcK26' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">Hololive error</a>
 	</div>
 
 </body>
@@ -250,7 +250,7 @@
 			break
 
 			case 'youglish':
-			infcont = "• renvoie un passage de vidéo youtube sur contenant le mot recherché";
+			infcont = "• renvoie un passage de vidéo youtube contenant le mot recherché";
 			break
 
 			case 'forvo':
