--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div class='tt' id='kyuhub'><h1>Kyuhubb</h1></div>
 	<div class='tt' id='el1'>
-		<h1>Dictionnaires</h1>
+		<h1>Dictionaries</h1>
 		<a href='https://jisho.org/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">jisho</a>
 		<a href='https://jpdb.io/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">jpdb</a>
 		<a href='https://sakura-paris.org/dict/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">sakura-paris</a>
@@ -29,11 +29,11 @@
 
 	<div id="info">
 		<h1 id='t-info'>informations</h1>
-		<p id='c-info'>survolez in site web avec votre souris pour afficher des informations le concernant</p>
+		<p id='c-info'>Hover on the links with your mouse to display the information about it.</p>
 	</div>
 
 	<div class='tt' id='el3'>
-		<h1>Ressources pédagogiques</h1>
+		<h1>Learning Ressources</h1>
 		<a href='https://www.imabi.net/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">imabi</a>
 		<a href='https://jlptsensei.com/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">jlptsensei</a>
 		<a href='https://www.ici-japon.com/apprendre-le-japonais/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">ici-japon</a>
@@ -68,7 +68,7 @@
 	</div>
 
 	<div class='tt' id='el5'>
-		<h1>Subs Japonaises</h1>
+		<h1>Japanese Subs</h1>
 		<a href='https://itazuraneko.neocities.org/library/sub.html' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">itazuraneko</a>
 		<a href='https://kitsunekko.net/dirlist.php?dir=subtitles%2Fjapanese%2F' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">kitsunekko</a>
 		<a href='https://animelon.com/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">animelon</a>
@@ -76,28 +76,23 @@
 
 
 	<div class='tt' id='el6'>
-		<h1>Phrases Exemples</h1>
+		<h1>Exemples Sentences</h1>
 		<a href='http://yourei.jp/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">yourei</a>
-		<a href='https://kyuhubb.github.io/reibun' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">reibun</a>
 		<a href='https://sentencesearch.neocities.org/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">sentencesearch</a>
 		<a href='https://nlb.ninjal.ac.jp/search/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">ninjal</a>
 		<a href='https://massif.la/ja' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">massif</a>
 	</div>
 
 	<div class='tt' id='el7'>
-		<h1>Prononciation</h1>
+		<h1>Pronunciation</h1>
 		<a href='https://forvo.com/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">forvo</a>
 		<a href='https://youglish.com/japanese' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">youglish</a>
 	</div>
 
 
 	<div class='tt' id='el8'>
-		<h1>Divers</h1>
+		<h1>Misc</h1>
 		<a href='https://nyaa.si/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">nyaa</a>
-		<a href='https://www.ggbases.com/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">ggbases(18+)</a>
-		<a href='https://ryuubloggerv2.blogspot.com/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">ryuubloggerv2(+18)</a>
-		<a href='https://www.ryuugames.com/tag/japanese/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">ryuugames(+18)</a>
-		<a href='https://www.tokyotosho.info/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">tokyotosho(18+)</a>
 	</div>
 
 	<div class='tt' id='el9'>
@@ -107,10 +102,9 @@
 	</div>
 
 	<div class='tt' id='el10'>
-		<h1>Créations originales</h1>
+		<h1>Kyu's Originals</h1>
 		<a href='https://kyuhubb.github.io/cardogus' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">cardogus</a>
-		<a href='https://www.mediafire.com/file/x8yza7jegwnc28w/Jitogus.rar/file' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">jitogus</a>
-		<a href='https://kyuhubb.github.io/reibun' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">reibun</a>
+		<a href='https://www.mediafire.com/file/l9hvoqwoa2n9kkx/Jitogus.zip/file' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">jitogus</a>
 	</div>
 
 	<div class='tt' id='el11'>
@@ -146,183 +140,163 @@
 		switch(infweb){
 
 			case 'Hololive error':
-			infcont = '• Manga hybride officiellement créé par Hololive<br><br>• Dubbé par les talents d\'Hololive<br><br>• Subs japonaises<br><br>• Subs anglaises disponible<br><br>• Court mais intense (25 chapitres)<br><br>• japonais abordable (1er chapitre légèrement plus difficile)';
+			infcont = '• Hybrid manga officially created by Hololive<br><br>• Dubbed by the talents of Hololive<br><br>• japanese subs<br><br>• english subs avaible<br><br>• 25 chapters in total<br><br>• easy japanese (1st chapter a bit more harder)';
 			break
 
 			case '狐の旅路 (kitsune no tabiji)':
-			infcont = "• jeu Hololive non-officiel<br><br>traduit depuis le chinois mandarin<br><br>• japonais abordable<br><br>• disponible gratuitement sur Steam<br><br>• Créé avec RPG maker"
+			infcont = "• hololive fan game<br><br>• translated to japanese from mandarin chinese<br><br>• easy japanese<br><br>• avaible for free on steam<br><br>• Made with RPG maker"
 			break
 
 			case 'cdromance':
-			infcont = "• jeux japonais pour émulateur psp";
+			infcont = "• japanese games for psp emulator";
 			break
 
 			case 'Nendoroid Generation':
-			infcont = "• combat tour par tour<br><br>• large crossover<br><br>• les Nendoroid sont trop cutes<br><br>• japonais abordable<br><br>• les aubergines sont des fruits";
-			break
-
-			case 'shōnen jump +':
-			infcont = "• téléchargment possible via l'analyseur réseau<br><br>• reconstruction des pages nécessaire après téléchargement<br><br>• mélange des pièces du puzzle identique sur chaque page";
-			break
-
-			case 'sukima':
-			infcont = "• téléchargment possible via l'analyseur réseau<br><br>• reconstruction des pages nécessaire après téléchargement<br><br>• mélange des pièces du puzzle variable";
+			infcont = "• turn by turn fights<br><br>• large crossover<br><br>• Nendoroid are cutes<br><br>• rather easy japanese ?<br><br>• eggplants are fruits";
 			break
 
 			case 'PPSSPP':
-			infcont = "• émulateur PSP<br><br>• supporte : windows, macOS, linux, android, iOS, Switch, Blackberry, autres..."
+			infcont = "• PSP emulator<br><br>• support : windows, macOS, linux, android, iOS, Switch, Blackberry, others..."
 			break
 
 			case 'Tales of Eternia':
-			infcont = "• JRPG<br><br>• coup de coeur<br><br>• partiellement Dubbé en japonais<br><br>• combats en temps réel (pas tour par tour)"
+			infcont = "• JRPG<br><br>• my favorite<br><br>• partially dubbed in japanese<br><br>• real time combats"
 			break
 
 			case 'Houchou-san no Uwasa':
-			infcont = "• horreur/légende urbaine<br><br>• gameplay permet de se déplacer librement dans le batîment<br><br>• japonais facile<br><br>• SFW"
+			infcont = "• horror/urban legend<br><br>• can freely move in the building via a map<br><br>• easy japanese<br><br>• SFW"
 			break
 
 			case 'Kanji Trainer':
-			infcont = '• jeu pour se préparer au 漢字能力検定 (kanji nouryoku kentei) 2006<br><br>• contient également divers mini-jeux liés au kanji';
+			infcont = '• game to prepare for the 漢字能力検定 (kanji nouryoku kentei) 2006<br><br>• also contains various mini-games related to kanji';
 			break
 
 			case 'ici-japon':
-			infcont = "• 28 cours d'introduction au japonais entièrement en français";
-			break
-
-			case 'reibun':
-			infcont = '• recherche phrases exemples tirés de light novels par expression exacte. (possibilité d\'associer 2 expressions)<br><br>• outil expérimental pour estimer la difficulté des LN également disponible';
+			infcont = "• 28 introductory courses in Japanese entirely in French";
 			break
 
 			case 'jitogus':
-			infcont = '• compilation de dictionnaires à télécharger pour utilisation offline<br><br>• recherche via moteur de recherche<br><br>• en bêta, ne touchez à rien lors des chargements'
+			infcont = '• compilation of dictionaries to download for offline use';
 			break
 
 			case 'cardogus':
-			infcont = '• révision et gestion de deck<br><br>• style anki/kotoba<br><br>• supporte les notes<br><br>• création de cartes multiples sur base d\'un memo<br><br>• transfert de cartes entre decks<br><br>• decks sauvegardés sur l\'appareil uniquement<br><br>• plus encore...';
+			infcont = '• flashcards management and reviewing<br><br>• anki/kotoba style<br><br>• additional notes on cards supported<br><br>• creation of multiple cards based on a memo<br><br>• transfer of cards between decks<br><br>• decks can be saved on the device only<br><br>• and more...';
 			break
 
 			case 'pixiv comic':
-			infcont = '• section dédiée aux mangas partiellement ou totalement disponibles gratuitement';
+			infcont = '• section of pixiv dedicated to mangas partially or totally available for free';
 			break
 
 			case 'syosetu':
-			infcont = '• light novels amateurs';
+			infcont = '• web novels (the best ones have been published but the original work are still avaibles on the website)';
 			break
 
 			case 'yomuyomu':
-			infcont = '• une histoire en 12 chapitres spécifiquement conçue avec une difficulté JLPT N5<br><br>• adaptation d\'une nouvelle en 8 chapitres dans le but de correspondre à une difficulté N3<br><br>• lecture audio disponible';
+			infcont = '• a 12-chapter story specifically designed with JLPT N5 difficulty<br><br>• adaptation of a short story in 8 chapters in order to correspond to a N3 difficulty<br><br>• audio playback available';
 			break
 
 			case 'kakuyomi':
-			infcont = '• light novels amateurs<br><br>• les LN postés ayants pour origine Kakuyomi et adaptés en livre, anime, jeux-vidéo également disponible gratuitement';
+			infcont = '• web novels (the best ones have been published but the original work are still avaibles on the website)';
 			break
 
 			case 'yourei':
-			infcont = '• recherche phrases exemples';
-			break
-
-			case 'ggbases(18+)':
-			infcont = '• torrents douteux (VN 18+?)';
-			break
-
-			case 'tokyotosho(18+)':
-			infcont = '• divers torrents, principalement 18+';
+			infcont = '• search examples sentences';
 			break
 
 			case 'genki elementary':
-			infcont = '• genki niveau élémentaire I et II (EN)';
+			infcont = '• genki elementary I et II';
 			break
 
 			case 'nandoku':
-			infcont = '• quiz vocabulaire, lectures difficiles';
+			infcont = '• vocabulary quizz dedicated to difficult readings';
 			break
 
 			case 'nandoku - kanken':
-			infcont = '• quiz kanken';
+			infcont = '• kanken quiz';
 			break
 
 			case 'kitsunekko':
-			infcont = '• sous-titres japonais à télécharger uniquement'
+			infcont = '• japanese subs (download only)'
 			break
 
 			case 'animelon':
-			infcont = "• site de streaming d'anime avec sous-titres japonais, romaji, hiragana, katakana, français";
+			infcont = "• anime streaming site with japanese subtitles, romaji, hiragana, katakana, english, french";
 			break
 
 			case 'youglish':
-			infcont = "• renvoie un passage de vidéo youtube contenant le mot recherché";
+			infcont = "• returns a passage of youtube video containing the searched word";
 			break
 
 			case 'forvo':
-			infcont = "• prononciation d'un mot recherché par des natifs";
+			infcont = "• pronunciation of a searched word by native speakers";
 			break
 
 			case 'nyaa':
-			infcont = '• site de torrents en lien avec le japonais';
+			infcont = '• torrent site related to japanese';
 			break
 
 			case 'jisho':
-			infcont = '• dictionnaire en ligne (JPーEN)';
+			infcont = '• online dictionary (JPーEN)';
 			break
 
 			case 'honyakustar':
-			infcont = '• dictionnaire supposé pour traducteurs (JPーEN)';
+			infcont = '• supposed to be a dictionary dedicated for translators (JPーEN)';
 			break
 
 			case 'jpdb':
-			infcont = '• dictionnaire en ligne (JPーEN)<br><br>• classification de ligth novels par difficulté<br><br>• gestion et révision de decks<br><br>• decks vocabulaire spécifique à une oeuvre';
+			infcont = '• online dictionary (JPーEN)<br><br>• light novels ranking by difficulty<br><br>• flascards reviewing<br><br>• vocabulary deck specific to a given piece of work';
 			break
 
 			case 'sakura-paris':
-			infcont = '• large compilation de dictionnaires en ligne';
+			infcont = '• big compilation of online dictionaries (online)';
 			break
 
 			case 'jlect':
-			infcont = '• dictionnaire en ligne spécialisé en dialectes (JPーEN)';
+			infcont = '• online dictionary specialized in dialects (JPーEN)';
 			break
 
 			case 'weblio':
-			infcont = '• dictionnaire japonais only en ligne';
+			infcont = '• JP-JP dictionary';
 			break
 
 			case 'itazuraneko':
-			infcont = '• grande collection de light novels au format texte<br><br>• sous-titres japonais à télécharger uniquement<br><br>• nombreuses autres ressources';
+			infcont = '• large collection of light novels in text format<br><br>• Japanese subtitles (download only)<br><br>• many other resources';
 			break
 
 			case 'boroboro':
-			infcont = '• collection de light novels au format texte';
+			infcont = '• collection of light novels in text format';
 			break
 
 			case 'imabi':
-			infcont = '• cours de grammaire en profondeur';
+			infcont = '• in-depth grammar course';
 			break
 
 			case 'jlptsensei':
-			infcont = '• cours de grammaire ultra-simplifiés';
+			infcont = '• ultra-simplified grammar lessons';
 			break
 
 			case "erin's challenge":
-			infcont = "• vidéos avec mise en situation pour compréhension à l'audition avec une pointe de comédie";
+			infcont = "• videos for listening comprehension with a touch of comedy";
 			break
 
 			case "nhk easy japanese":
-			infcont = "• cours de japonais de la NHK avec courts sketchs en images avec doublage<br><br>• disponible en français";
+			infcont = "• NHK Japanese language course with short sketches in pictures with dubbing<br><br>• avaible in many languages";
 			break
 
 			case "tsunagarujp":
-			infcont = "• vidéos avec mise en situation pour compréhension à l'audition destiné à l'intégration des étrangers résidents au Japon (pas drôle)";
+			infcont = "• videos for comprehension at the audition for the integration of foreign residents in Japan (not funny)";
 			break
 
 			case 'dictionnaire-japonais':
-			infcont = '• dictionnaire franco-japonais en ligne';
+			infcont = '• online French-Japanese dictionary';
 			break
 
 			case 'jibiki':
-			infcont = '• dictionnaire franco-japonais en ligne';
+			infcont = '• online French-Japanese dictionary';
 			break
 
 			default:
-			infcont = 'aucune information';
+			infcont = 'no information';
 		}
 
 		tinfo.innerHTML = infweb;
@@ -331,7 +305,7 @@
 
 	function delinfo(){
 		tinfo.innerHTML = 'informations';
-		cinfo.innerHTML = "survolez in site web avec votre souris pour afficher des informations le concernant";	
+		cinfo.innerHTML = "Hover on the links with your mouse to display the information about it";	
 	}
 </script>
 </html>
